samples/_failures_safe/1761480611_f72f4b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc86e78b.c: In function ‘parse_operator’:
./samples/SAFE/__tmp_fc86e78b.c:160:5: error: expected expression at end of input
  160 |     while (
      |     ^~~~~
./samples/SAFE/__tmp_fc86e78b.c:160:5: error: expected declaration or statement at end of input
